--- a/src/KursovaRabota/KursovaRabota/Views/Shared/_Layout.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Shared/_Layout.cshtml
@@ -26,7 +26,20 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                       <div>
+                        <p>Hello @User.Identity.Name</p>
+                            <a asp-controller="User" asp-action="Logout" class="btn btn-primary">Logout</a>
+                        </div>
+                    }
+                    else
+                    {
+                        <a asp-controller="User" asp-action="Login" class="btn btn-primary">Login</a>
+
+                    }
+                    
+
                 </div>
             </div>
         </nav>
