lots of stuff fixed

--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
@@ -18,7 +18,7 @@
             <form method="get">
                 <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
             </form>
-            <form method="post">
+            <form method="get">
                 <button asp-action="Delete" asp-controller="User" type="submit" class="btn btn-primary" asp-route-Id="@user.Id">Изтрий</button>
 
             </form>
