--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
@@ -9,13 +9,13 @@
         <div class="card-body">
             <h5 class="card-title">@($"{user.FirstName} {user.LastName}")</h5>
             <p class="card-text">
-                @($"UserName: {user.UserName}<br/>Email: {user.Email}<br/>Phone: {user.PhoneNumber}")
+                UserName: @user.UserName <br />Email: @user.Email Phone: <br />@user.PhoneNumber
             </p>
             @if (!string.IsNullOrEmpty(user.DesiredRole))
             {
                 <p class="card-text">Desired Role: @user.DesiredRole</p>
             }
-            <form  method="post">
+            <form  method="get">
                 <button asp-action="ApproveUser" asp-controller="User" type="submit" class="btn btn-primary" asp-route-id="@user.Id">Approve</button>
             </form>
         </div>
