--- a/src/KursovaRabota/KursovaRabota/Views/Subject/Add.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Subject/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@model KursovaRabota.ViewModels.SubjectViewModel
+﻿@using KursovaRabota.ViewModels;
+@model SubjectViewModel
 
 <form asp-action="Add" method="post">
     <div class="form-group">
@@ -8,4 +9,16 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Add Subject</button>
+
+
 </form>
+<div>
+    @if (Model.Subjects != null)
+    {
+        @for (int i = 1; i <= Model.Subjects.Count; i++)
+        {
+            <label>@i: @Model.Subjects[i-1].SubjectName</label>
+            <a class="btn btn-danger" asp-action="Delete" asp-controller="Subject" asp-route-id="@Model.Subjects[i-1].Id">Delete</a>
+        }
+    }
+</div>
