added crud for competition type. Competitions should work .
Add create comp view

--- a/src/KursovaRabota/KursovaRabota/Views/Shared/_Layout.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Shared/_Layout.cshtml
@@ -21,27 +21,26 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Начална страница</a>
                         </li>
                     </ul>
                     @if (User.Identity.IsAuthenticated)
                     {
                         <div>
                             <p>Hello @User.Identity.Name</p>
-                            <a asp-controller="User" asp-action="Logout" class="btn btn-primary">Logout</a>
+                            <a asp-controller="User" asp-action="Logout" class="btn btn-primary">Излез</a>
                         </div>
                     }
                     else
                     {
-                        <a asp-controller="User" asp-action="Login" class="btn btn-primary">Login</a>
-                        <a asp-controller="User" asp-action="Register" class="btn btn-primary">Register</a>
+                        <a asp-controller="User" asp-action="Login" class="btn btn-primary">Влез</a>
+                        <a asp-controller="User" asp-action="Register" class="btn btn-primary">Регустрирай се</a>
                     }
                     @if(User.IsInRole("Admin")|| User.IsInRole("Teacher"))
                     {
-                        <a asp-controller="Subject" asp-action="Add" class="btn btn-primary">Add Subject</a>
+                        <a asp-controller="Subject" asp-action="Add" class="btn btn-primary">Добави предмет</a>
+                        <a asp-controller="CompetitionType" asp-action="Add" class="btn btn-primary">Добави тип състезание</a>
+
                     }
                     @if (User.IsInRole("Admin"))
                     {
