--- a/src/KursovaRabota/KursovaRabota/Views/Subject/Add.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Subject/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@using KursovaRabota.ViewModels;
+﻿@using KursovaRabota.ViewModels.SubjectVMs
 @model SubjectViewModel
 
 <form asp-action="Add" method="post">
