--- a/src/KursovaRabota/KursovaRabota/Views/User/UpdateUser.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/UpdateUser.cshtml
@@ -1,4 +1,5 @@
-﻿@model KursovaRabota.ViewModels.UpdateUserViewModel
+﻿@using KursovaRabota.ViewModels.UserVMs
+@model UpdateUserViewModel
 
 <h2>Детайли за потребителя</h2>
 
