--- a/src/KursovaRabota/KursovaRabota/Views/User/Login.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@using KursovaRabota.ViewModels
+﻿@using KursovaRabota.ViewModels.UserVMs
+
 @model LoginViewModel
 <head>
     <link rel="stylesheet" href="~/css/login.css" />
