--- a/src/KursovaRabota/KursovaRabota/Views/User/Register.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/Register.cshtml
@@ -72,7 +72,7 @@
                 </div>
             }
 
-            <div class="form-group" id="classDiv">
+            <div class="form-group" id="classDiv" style="display: none;">
                 <label asp-for="Class">Клас</label>
                 <input asp-for="Class" class="form-control" />
                 <span asp-validation-for="Class" class="text-danger"></span>
