--- a/src/KursovaRabota/KursovaRabota/Views/CompetitionType/Add.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/CompetitionType/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@using KursovaRabota.ViewModels.CompetitionTypeVMs
 @model CompetitionTypeViewModel
 
-<form asp-action="Add" method="post">
+<form asp-controller="CompetitionType" asp-action="Add" method="post">
     <div class="form-group">
         <label asp-for="Type">Вид състезание</label>
         <input asp-for="Type" class="form-control" />
@@ -18,7 +18,7 @@
         @for (int i = 1; i <= Model.AllTypes.Count; i++)
         {
             <label>@i: @Model.AllTypes[i - 1].Type</label>
-            <a class="btn btn-danger" asp-action="Delete" asp-controller="Subject" asp-route-id="@Model.AllTypes[i-1].Id">Delete</a>
+            <a class="btn btn-danger" asp-action="Delete" asp-controller="CompetitionType" asp-route-id="@Model.AllTypes[i-1].Id">Delete</a>
         }
     }
 </div>
