--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAll.cshtml
@@ -1,7 +1,7 @@
 ﻿@using KursovaRabota.ViewModels
 @model List<DisplayUserViewModel>
 
-<h2>User Management</h2>
+<h2>Потребители</h2>
 
 @foreach (var user in Model)
 {
@@ -9,11 +9,11 @@
         <div class="card-body">
             <h5 class="card-title">@user.FirstName @user.LastName</h5>
             <p class="card-text">
-                UserName: @user.UserName<br/> Email: @user.Email<br/>Phone: @user.PhoneNumber
+                Потребителско име: @user.UserName<br /> Електронна поща: @user.Email<br />Телефон: @user.PhoneNumber
             </p>
             @if (!string.IsNullOrEmpty(user.DesiredRole))
             {
-                <p class="card-text">Desired Role: @user.DesiredRole</p>
+                <p class="card-text">Желана роля: @user.DesiredRole</p>
             }
             <form method="get">
                 <button asp-action="UpdateUser" asp-controller="User" type="submit" asp-route-Id="@user.Id" class="btn btn-primary">Промени</button>
@@ -25,3 +25,4 @@
         </div>
     </div>
 }
+
