--- a/src/KursovaRabota/KursovaRabota/Views/Competition/GetAllFilled.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Competition/GetAllFilled.cshtml
@@ -1,29 +1,18 @@
-﻿@using KursovaRabota.ViewModels.CompetitionVMs
-@model CompetitionGetAllViewModel
+﻿@using KursovaRabota.ViewModels.CompetitionVMs;
+@model List<CompetitionGetViewModel>
 
 @{
     ViewData["Title"] = "Всички Състезания";
 }
 
-<h1>Всички Състезания</h1>
+<h1>Запълнени Състезания</h1>
 
 <div class="mb-3">
     <a asp-controller="Competition" asp-action="Add" class="btn btn-success">Добави Състезание</a>
 </div>
 
-@if (Model.Competitions.Any())
+@if (Model.Any())
 {
-    <div class="mb-3">
-        <label for="pageSize">Състезания на страница:</label>
-        <select id="pageSize" class="form-select">
-            <option value="1">1</option>
-            <option value="5">5</option>
-            <option value="10" selected>10</option> <!-- Default value -->
-            <option value="15">15</option>
-            <option value="20">20</option>
-        </select>
-    </div>
-
     <table class="table">
         <thead>
             <tr>
@@ -38,8 +27,8 @@
                 <th>Действия</th>
             </tr>
         </thead>
-        <tbody id="competitionTable">
-            @foreach (var competition in Model.Competitions)
+        <tbody>
+            @foreach (var competition in Model)
             {
                 <tr>
                     <td>@competition.Name</td>
@@ -77,17 +66,18 @@
                             </form>
 
                         }
-
+                        
                     </td>
                 </tr>
             }
         </tbody>
     </table>
-
-
 }
 else
 {
     <p>Няма налични състезания.</p>
 }
 
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
