--- a/src/KursovaRabota/KursovaRabota/wwwroot/css/site.css
+++ b/src/KursovaRabota/KursovaRabota/wwwroot/css/site.css
@@ -20,3 +20,14 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+@media (min-width: 0px) {
+    .navbar-expand-lg .navbar-collapse {
+        display: flex !important;
+        flex-basis: auto;
+    }
+
+    .navbar-expand-lg .navbar-toggler {
+        display: none;
+    }
+}
